--- a/notebooks/test_logging.ipynb
+++ b/notebooks/test_logging.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n"
+    "\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,14 +26,14 @@
     "\n",
     "# function to append a row to the CSV file\n",
     "def append_to_csv(row_dict, header=False):\n",
-    "    row_df = pd.DataFrame([row_dict], columns=field_names)\n",
+    "    row_df = pd.DataFrame([row_dict], columns=list(row_dict.keys()))\n",
     "    row_df.to_csv(csv_path, mode=\"a\", header=header, index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,22 +53,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def in_range(time, ranges):\n",
+    "    if type(ranges[0]) == list:\n",
+    "        return np.any([in_range(time, range) for range in ranges])\n",
+    "    else:\n",
+    "        return time >= ranges[0] and time < ranges[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_of_day = {0:{\"label\": \"morning\",\"range\": [5,12]},1:{\"label\": \"afternoon\",\"range\": [12, 17]},2:{\"label\": \"night\",\"range\": [[0,5], [17,24]]}}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'tuple' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-360f3bef0e0d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([2]),)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.where([in_range(0, v[\"range\"]) for k,v in time_of_day.items()])[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -93,9 +118,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aecfbe8bebc72e58e927304bf76970d0d3cd036b3fb0dea9d6fb3391550f59df"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
