--- a/notebooks/Train Taxinet.ipynb
+++ b/notebooks/Train Taxinet.ipynb
@@ -410,19 +410,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_params = {\"num_epochs\": 10, \n",
-    "                   \"num_train_steps\":3000, \n",
-    "                   \"learning_rate\":1e-2, \n",
-    "                   \"compute_val\":500\n",
-    "                   }\n",
+    "learning_params = {\n",
+    "    \"num_epochs\": 10, \n",
+    "    \"num_train_steps\":3000, \n",
+    "    \"learning_rate\":1e-2, \n",
+    "    \"compute_val\":500\n",
+    "}\n",
     "\n",
-    "optimizer = optim.Adam(encoder.parameters(),\n",
-    "                    lr=learning_params[\"learning_rate\"],\n",
-    "                    weight_decay=1e-3)\n",
+    "optimizer = optim.Adam(\n",
+    "    encoder.parameters(),\n",
+    "    lr=learning_params[\"learning_rate\"],\n",
+    "    weight_decay=1e-3\n",
+    ")\n",
     "\n",
-    "scheduler = optim.lr_scheduler.LambdaLR(optimizer, \n",
-    "                                        lambda i: learning_params[\"learning_rate\"] if i < 6 else .1 * learning_params[\"learning_rate\"]\n",
-    "                                        )"
+    "scheduler = optim.lr_scheduler.LambdaLR(\n",
+    "    optimizer, \n",
+    "    lambda i: learning_params[\"learning_rate\"] if i < 6 else .1 * learning_params[\"learning_rate\"]\n",
+    ")"
    ]
   },
   {
