--- a/notebooks/analyze_dynamics.ipynb
+++ b/notebooks/analyze_dynamics.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,6 +57,146 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dyn1 = json.loads(r.get(\"flight/dynamics_new2\").decode(\"utf8\"))\n",
+    "dyn2 = json.loads((Path(\"\") / \"data\" / \"dynamics_new2.json\").read_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'f_fx_fu_fn2',\n",
+       " 'params': {'Wu': [[0.6328436605767929,\n",
+       "    0.0022997246683791064,\n",
+       "    0.10296347503088578,\n",
+       "    -0.08365639651574024],\n",
+       "   [-0.6452171128750633,\n",
+       "    -0.005795726380968786,\n",
+       "    -0.011195298853825305,\n",
+       "    0.021837877633682775],\n",
+       "   [0.08130255740244545,\n",
+       "    0.013609983755550377,\n",
+       "    -0.003989363431900857,\n",
+       "    0.025768656160479696],\n",
+       "   [0.41794772214305964,\n",
+       "    -0.004213016488050689,\n",
+       "    -0.009735929108981333,\n",
+       "    0.001103207146705077],\n",
+       "   [0.007151481700205557,\n",
+       "    0.559377885665725,\n",
+       "    0.03748908683169491,\n",
+       "    -0.0006235018987769107],\n",
+       "   [0.019455853461589942,\n",
+       "    -0.047743742681223056,\n",
+       "    0.2213055943682745,\n",
+       "    0.006303639775312753],\n",
+       "   [1.0492571675356164,\n",
+       "    -0.002250574223677609,\n",
+       "    -0.004229165277640952,\n",
+       "    -0.020419456021766653],\n",
+       "   [0.006038353856199286,\n",
+       "    1.3285617484473389,\n",
+       "    0.062237785630483475,\n",
+       "    0.013638747343729045],\n",
+       "   [0.032925967285139746,\n",
+       "    -0.12151023939105765,\n",
+       "    0.7217267879845876,\n",
+       "    0.052122240713640564]],\n",
+       "  'Wx': [[0.25091123861374165,\n",
+       "    0.17547032246210761,\n",
+       "    35.57093376153535,\n",
+       "    -0.02277653382929689,\n",
+       "    -2.337268881043658,\n",
+       "    0.04954356472160431,\n",
+       "    0.004345267056188107],\n",
+       "   [-0.09599483930206833,\n",
+       "    -0.012078371872122204,\n",
+       "    -8.633033415595035,\n",
+       "    -0.33664742024347954,\n",
+       "    -0.4490377701668569,\n",
+       "    0.11845739593437253,\n",
+       "    0.3180209233798227],\n",
+       "   [0.24263720916695108,\n",
+       "    -0.6281385259825519,\n",
+       "    29.106822982054062,\n",
+       "    -0.13839696216496414,\n",
+       "    -4.732446389613366,\n",
+       "    0.07554370692668054,\n",
+       "    0.008743935783599228],\n",
+       "   [0.0138821576815822,\n",
+       "    0.009827025387690895,\n",
+       "    -0.26592968929940514,\n",
+       "    0.02952510109972208,\n",
+       "    0.04487939100156118,\n",
+       "    -0.008573780281432906,\n",
+       "    -0.022630356253217854],\n",
+       "   [-0.0005608833612525918,\n",
+       "    0.00025231404944613107,\n",
+       "    -0.028706702526501406,\n",
+       "    0.03296600619159841,\n",
+       "    0.01785299890496773,\n",
+       "    0.14417558670191843,\n",
+       "    0.1583786952289477],\n",
+       "   [-0.007002102447993245,\n",
+       "    -0.001631433417590747,\n",
+       "    -0.060522154792212776,\n",
+       "    0.10486577331163321,\n",
+       "    0.05441741708628481,\n",
+       "    0.01571823333630272,\n",
+       "    0.5920139686720814],\n",
+       "   [0.01863257860475362,\n",
+       "    0.010512894549919105,\n",
+       "    -0.3768484959489169,\n",
+       "    0.010177793556775007,\n",
+       "    -2.5168164418972863,\n",
+       "    -0.009340882561690354,\n",
+       "    -0.010650257717531366],\n",
+       "   [0.0027168329750327847,\n",
+       "    0.0010850278761954746,\n",
+       "    -0.016328136893432637,\n",
+       "    0.03698585799091903,\n",
+       "    0.013031859906741022,\n",
+       "    -1.9943953510358032,\n",
+       "    0.18763501220566128],\n",
+       "   [-0.023728943384548395,\n",
+       "    -0.005988470435922085,\n",
+       "    -0.1918118722621207,\n",
+       "    0.4724443677837753,\n",
+       "    0.11742084382159758,\n",
+       "    0.0646231400439537,\n",
+       "    -1.8300755862843092]],\n",
+       "  'b': [-11.876275253784506,\n",
+       "   5.270835652979711,\n",
+       "   -11.586084730105146,\n",
+       "   -0.5725732527793237,\n",
+       "   0.022720392317690123,\n",
+       "   0.2867752941549345,\n",
+       "   -0.7134093669900413,\n",
+       "   -0.13885968082577865,\n",
+       "   0.9526033519750021],\n",
+       "  'dt_sqrt': [0.7071067811865476],\n",
+       "  'heading_correction': [0.0]}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dyn1"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -75,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +215,7 @@
        "(11,)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -177,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1.7511e-02: 100%|██████████| 10000/10000 [00:10<00:00, 936.27it/s]\n"
+      "1.4871e-02: 100%|██████████| 10000/10000 [00:13<00:00, 727.01it/s]\n"
      ]
     }
    ],
@@ -227,23 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "2473"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dynamics_obj = {\"name\": \"f_fx_fu_fn2\", \"params\": {k: v.tolist() for (k, v) in params.items()}}\n",
-    "r.set(\"flight/dynamics_new2\", json.dumps(dynamics_obj))"
+    "#r.set(\"flight/dynamics_new2\", json.dumps(dynamics_obj))\n",
+    "(Path(\"\") / \"data\" / \"dynamics_new2.json\").write_text(json.dumps(dynamics_obj))"
    ]
   },
   {
